# vb

./: .gitignore  Dockerfile  LICENSE  README.md  analyze_runs.py  analyze_turns.py  plot_best_of_n.py  plot_comparison.py  plot_results.py  plot_scores.py  requirements.txt  scores-xan.sh  setup.sh  summary-xan.sh  summary.sh  test_validation_bench.py  toml_validation_bench.py  update_results.sh  validation_bench.py
reference/: CMakeLists.txt  check_tests.py  check_toml_tests.py  validator.cpp
results/: STATUS.md  qwen_coder_next.txt  results.jsonl  summary.txt
results/claude-sonnet-4.0/: meta.json  summary.txt
results/gpt-codex-5.2/: meta.json
results/gpt-codex-5.2-high/: meta.json  summary.txt
results/gpt-codex-5.2-low/: summary.txt
results/kimi-k2.5/: meta.json  summary.txt
results/qwen3.5-122b-q2/: meta.json  summary.txt
results/qwen3.5-122b-q3/: meta.json  summary.txt
results/toml-1.0-c/: summary.txt
results/toml-1.0-cpp/: qwen3.5-397b-a17b-iq1_m.jsonl  summary.txt
results/toml-1.0-cpp-nospec/: summary.txt
results/toml-1.1-cpp/: summary.txt
results/toml-1.1-cpp-nospec/: summary.txt
results/toml-combined-cpp/: summary.txt
tasks/: gen_toml_combined_tests.py  gen_toml_tests.py
tasks/bencode-cpp-v0/: prompt-bijection.txt  prompt-explicit-leading-zero.txt  prompt-strict.txt  prompt.txt  test.sh  tests.jsonl
tasks/der-int-c-v0/: compile  prompt-examples.txt  prompt-explicit.txt  prompt-terse-length.txt  prompt.txt  tests.jsonl
tasks/minbencode-c-v0/: prompt.txt  tests.jsonl
tasks/minbencode-cpp-v0/: prompt.txt
tasks/toml-v0/: test.sh  (+1 more)
(+133 files in other folders)
